--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "lint-staged": {
     "src/**/*.js": [
+      "yarn test-related --",
       "eslint"
     ]
   },
@@ -36,16 +37,20 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
