--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "run-p start:* ",
     "start-silent": "run-p start > /dev/null",
     "start:react": "react-scripts start",
+    "start:backend": "nodemon backend/server.js",
     "start-and-test": "run-p start-silent test ",
     "build": "react-scripts build",
     "test": "react-scripts test --noStackTrace",
@@ -45,10 +46,18 @@
     "@mui/material": "^5.2.3",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "cors": "2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "express": "4.17.1",
+    "express-session": "1.17.0",
+    "mongodb": "3.3.2",
+    "mongoose": "5.7.1",
     "node-sass": "4.14.1",
+    "nodemon": "1.19.1",
     "npm-run-all": "^4.1.5",
+    "passport": "0.4.0",
+    "passport-google-oauth20": "2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
