--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "run-p start:* ",
     "start-silent": "run-p start > /dev/null",
     "start:react": "react-scripts start",
-    "start:backend": "nodemon backend/server.js",
+    "start-backend": "nodemon backend/server.js",
     "start-and-test": "run-p start-silent test ",
     "build": "react-scripts build",
     "test": "react-scripts test --noStackTrace",
@@ -60,6 +60,7 @@
     "passport-google-oauth20": "2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
